assert(state == nullptr || state->get_thread_oop() != nullptr) failed: incomplete state

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 26
    • Affects Version/s: 26
    • Component/s: hotspot
    • None
    • b08

      # Internal Error (/Users/lmesnik/ws/jdk/post_early/open/src/hotspot/share/prims/jvmtiThreadState.inline.hpp:98), pid=74504, tid=8963
      # assert(state == nullptr || state->get_thread_oop() != nullptr) failed: incomplete state
      #
      # JRE version: OpenJDK Runtime Environment (26.0) (fastdebug build 26-internal-adhoc.lmesnik.open)
      # Java VM: OpenJDK 64-Bit Server VM (fastdebug 26-internal-adhoc.lmesnik.open, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)

      happens in the

      Current thread (0x0000000125021e10): JavaThread "main" [_thread_in_vm, id=8963, stack(0x000000016d84c000,0x000000016da4f000) (2060K)] _threads_hazard_ptr=0x000060000297fe10, _nested_threads_hazard_ptr_cnt=0

      Stack: [0x000000016d84c000,0x000000016da4f000], sp=0x000000016da4dd30, free space=2055k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x13fc3e4] VMError::report(outputStream*, bool)+0x1b00 (jvmtiThreadState.inline.hpp:98)
      V [libjvm.dylib+0x13ffc84] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void const*, void const*, char const*, int, unsigned long)+0x55c
      V [libjvm.dylib+0x5c7278] print_error_for_unit_test(char const*, char const*, char*)+0x0
      V [libjvm.dylib+0xbad064] JvmtiThreadState::state_for_while_locked(JavaThread*, oop)+0x488
      V [libjvm.dylib+0xbac654] JvmtiThreadState::state_for(JavaThread*, Handle)+0x250
      V [libjvm.dylib+0xc11554] JvmtiEnv::GetThreadLocalStorage(_jobject*, void**)+0x2e0
      C [libjdwp.dylib+0x22408] findThread+0x84
      C [libjdwp.dylib+0x21b64] insertThread+0x38
      C [libjdwp.dylib+0x21a28] threadControl_onHook+0x78
      C [libjdwp.dylib+0x14c4c] eventHandler_initialize+0x658
      C [libjdwp.dylib+0x10b74] initialize+0x1c8
      C [libjdwp.dylib+0xfc44] cbEarlyVMInit+0x80
      V [libjvm.dylib+0xc3cf5c] JvmtiExport::post_vm_initialized()+0x374
      V [libjvm.dylib+0x1351500] Threads::create_vm(JavaVMInitArgs*, bool*)+0x900
      V [libjvm.dylib+0xa20190] JNI_CreateJavaVM+0x7c
      C [libjli.dylib+0xa3d0] JavaMain+0x100
      C [libjli.dylib+0xd52c] ThreadJavaMain+0xc
      C [libsystem_pthread.dylib+0x6c0c] _pthread_start+0x88
      Lock stack of current Java thread (top to bottom):

            Assignee:
            Leonid Mesnik
            Reporter:
            Leonid Mesnik
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: