8362203: assert(state == nullptr || state->get_thread_oop() != nullptr) failed: incomplete state